# FileOpr

./: CMakeLists.txt  IFile.cpp  IFile.h  file_manager.cpp  file_manager.h  ftp_client.cpp  ftp_client.h  ftp_file.cpp  ftp_file.h  locale_file.cpp  locale_file.h  log_opr.cpp  log_opr.h  main.cpp
